# piper-ik-test

./: README.md  memo.html  memo.md  pyproject.toml
models/urdf/: piper_description.xacro  piper_description_gazebo.xacro  piper_description_new.urdf  piper_no_gripper_description.urdf  piper_no_gripper_description.xacro  piper_no_gripper_description_gazebo.xacro
notebooks/: 01_example.ipynb  02_pinocchio_example.ipynb  03_visualizer_example.ipynb  04_piper_test.ipynb
piper_ik_test/: __init__.py
