[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piper-ik-test"
version = "0.1.0"
description = "A Jupyter project for robot kinematics using Pinocchio"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "jupyter>=1.0.0",
    "notebook>=7.0.7",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "scikit-learn>=1.3.0",
    "pin>=2.6.0",
    "hpp-fcl>=1.7.3",
    "eigenpy>=3.1.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

[tool.setuptools]
packages = ["piper_ik_test"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q" 